--- a/proyecto1/estilos/estilos.css
+++ b/proyecto1/estilos/estilos.css
@@ -8,6 +8,19 @@ body {
     padding:1em;
 }
 
+.cabecera {
+    width:100%;
+    background-color:cadetblue;
+    color:#fff;
+    flex-direction: column;
+    height:60px;
+    align-items: center;
+    justify-content: center;
+    display:flex;
+}
+
+
+
 .post {
     width:70%;
     height:400px;
