--- a/proyecto1/estilos/estilos.css
+++ b/proyecto1/estilos/estilos.css
@@ -12,13 +12,29 @@ body {
     width:100%;
     background-color:cadetblue;
     color:#fff;
-    flex-direction: column;
+    flex-direction: row;
     height:60px;
     align-items: center;
-    justify-content: center ;
+    justify-content: space-around ;
     display:flex;
-    margin:1em 0;
+    margin:0 0 1em 0;
+    box-shadow: 0px 0px 20px rgba(0,0,0,.6);
 }
+
+.cabecera h1 {
+    color:#000;
+    font-weight: bold;
+}
+
+.cabecera h2 {
+    color:#000;
+    letter-spacing: 1px;
+}
+
+    .cabecera h2:hover {
+        color: #fff;
+    }
+
 
 .post {
     width:70%;
