--- a/proyecto1/estilos/estilos.css
+++ b/proyecto1/estilos/estilos.css
@@ -10,7 +10,7 @@ body {
 
 .post {
     width:70%;
-    height:400px;
+    height:600px;
     margin:0 auto;
     padding:1em;
     border:2px solid #000;
@@ -31,3 +31,7 @@ body {
         color:#000;
         text-align: left;
     }
+
+        .post p a {
+            color:rgb(55, 85, 218);
+        } 
