--- a/proyecto1/estilos/estilos.css
+++ b/proyecto1/estilos/estilos.css
@@ -1,27 +1,55 @@
+* {
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+
 body {
     text-align:center;
     font-family: Arial;
     color:deeppink;
+    background: rgb(25, 27, 27);
 }
 
 .container {
     padding:1.2em;
+    
 }
 
 .cabecera {
-    width:100%;
+    background:#fff;
+    width:60%;
     background-color:cadetblue;
     color:#fff;
     flex-direction: row;
-    height:60px;
+    height:80px;
     align-items: center;
-    justify-content: space-around ;
+    justify-content:space-between ;
     display:flex;
-    margin:0 0 1em 0;
-    box-shadow: 0px 0px 20px rgba(0,0,0,.6);
+    margin:0 auto;
+    border:2px solid cadetblue;
+    border-radius: 10px 10px 0 0;
+    -webkit-border-radius: 10px 10px 0 0;
+    -moz-border-radius: 10px 10px 0 0;
+    -ms-border-radius: 10px 10px 0 0;
+    -o-border-radius: 10px 10px 0 0;
+    padding:0 1em;
 }
 
-    .cabecera h1 {
+    .cabecera .izquierda {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        
+    }
+
+    .cabecera .izquierda img {
+        width:60px;
+        height:60px;
+        margin-right:20px;
+    }
+
+    .cabecera .izquierda h1 {
         color:#000;
         font-weight: bold;
     }
@@ -37,21 +65,24 @@ body {
 
 
 .post {
-    width:70%;
+    background:#fff;
+    width:60%;
     height:600px;
     margin:0 auto;
     padding:1em;
-    border:2px solid #000;
-    border-radius: 1em;
-    -webkit-border-radius: 1em;
-    -moz-border-radius: 1em;
-    -ms-border-radius: 1em;
-    -o-border-radius: 1em;
+    line-height: 30px;
+    border:2px solid #fff;
+    border-radius: 0 0 10px 10px;
+    -webkit-border-radius: 0 0 10px 10px;
+    -moz-border-radius: 0 0 10px 10px;
+    -ms-border-radius: 0 0 10px 10px;
+    -o-border-radius: 0 0 10px 10px;
 }
 
     .post h1 {
         font-size:3em;
         text-align: left;
+        margin:20px 0;
     }
 
     .post p {
